# snapshot

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml
.github/workflows/: publish.yml
commands/: delete_snap.py  info_snap.py  init.py  list_snap.py  restore_latest.py  restore_snap.py  save_snap.py  snapshot.py  stats_snap.py
src/snapshot/: __init__.py  __main__.py  cli.py  config.py
src/snapshot/commands/: delete_snap.py  info_snap.py  init.py  list_snap.py  restore_latest.py  restore_snap.py  save_snap.py  stats_snap.py
src/snapshot/utils/: file_manager.py  metadata_loader.py  snapignore.py
utils/: console.py  file_manager.py  metadata_loader.py  snapignore.py
